add a new logo in the ReadMe" "

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "generator.js",
   "dependencies": {
+    "ansi-colors": "^4.1.1",
     "asciiart-logo": "^0.2.6",
     "chalk-animation": "^1.6.0",
     "colors": "^1.4.0",
