--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "generator.js",
   "dependencies": {
     "ansi-colors": "^4.1.1",
+    "ascii-art-table": "^1.0.1",
     "asciiart-logo": "^0.2.6",
     "chalk-animation": "^1.6.0",
     "colors": "^1.4.0",
