--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "employee-management-system",
   "version": "1.0.0",
-  "description": "",
+  "description": "MySQl Database & Node Server",
   "main": "generator.js",
   "dependencies": {
     "ansi-colors": "^4.1.1",
     "ascii-art-table": "^1.0.1",
     "asciiart-logo": "^0.2.6",
+    "cfonts": "^2.9.1",
     "chalk-animation": "^1.6.0",
     "colors": "^1.4.0",
     "console.table": "^0.10.0",
+    "draftlog": "^1.0.12",
     "inquirer": "^7.3.3",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "tinygradient": "^1.1.2"
   },
   "devDependencies": {},
   "scripts": {
